--- a/config.json
+++ b/config.json
@@ -1,8 +1,8 @@
 {
     "poolHost": "127.0.0.1",
     "coin": "Bigbang",
-    "symbol": "bbc",
-    "coinUnits": 1,
+    "symbol": "BBC",
+    "coinUnits": 1000000,
     "coinDecimalPlaces": 6,
     "coinDifficultyTarget": 60,
     "daemonType": "default",
@@ -107,7 +107,7 @@
         "maxAddresses": 100,
         "mixin": 7,
         "priority": 0,
-        "transferFee": 1,
+        "transferFee": 0.0001,
         "dynamicTransferFee": true,
         "minerPayFee": true,
         "minPayment": 1,
