--- a/config.json
+++ b/config.json
@@ -2,7 +2,7 @@
     "poolHost": "127.0.0.1",
     "coin": "Bigbang",
     "symbol": "BBC",
-    "coinUnits": 1000000,
+    "coinUnits": 1,
     "coinDecimalPlaces": 6,
     "coinDifficultyTarget": 60,
     "daemonType": "default",
